# scrape

./: .gitignore  Makefile  flake.nix  scrape.cabal
app/: scrape.hs
src/: Scrape.hs
src/Scrape/: Startup.hs
