cabal-version:        3.8
name:                 scrape
version:              0.1.0.0
license:              BSD-3-Clause
license-file:         LICENSE
author:               Michael Lee
maintainer:           metaml@gmail.com
category:             Web
extra-source-files:   CHANGELOG.md

library
  exposed-modules:    Scrape
  hs-source-dirs: src
  ghc-options: -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively
  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , BlockArguments
                    , ConstraintKinds
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveFunctor
                    , DeriveGeneric
                    , DerivingVia
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , PatternSynonyms
                    , PolyKinds
                    , QuasiQuotes
                    , OverloadedStrings
                    , OverloadedRecordDot
                    , PolyKinds
                    , RankNTypes
                    , RecordWildCards
                    , StandaloneDeriving
                    , ScopedTypeVariables
                    , StarIsType
                    , StrictData
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
  build-depends: base
               , containers
               , extra
               , lens
               , random
               , scalpel
               , streamly-core
               , text

executable scrape
  main-is:          scrape.hs
  hs-source-dirs:   app
  ghc-options:      -Wall -O2 -flate-specialise -fspecialise-aggressively
  default-language: Haskell2010
  build-depends:    base
                  , scrape
